  The note number is needed in some styles (e.g. New Zealand Law)
  that set ibid back-references without an ibid term, and so need
  to use a supra-style short form reference to refer to the same
  location in the source in this context.

- Avoid nil variables in parallel detection machinery.

- Use a more proper method of suppressing first-reference-note-number
  on parallel cites.

==========================
Changes in version 1.0.320
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Allow the form of locator labels on bill and legislation
  items to be controlled with a label-form attribute on
  cs:number, and provide a freshly coded but simpler mechanism
  for guessing plurality of the elements on these items.

- Always suppress subsequent renderings of the locator
  variable when once rendered via cs:number, regardless
  of how it is handled internally.

- Always respect the outermost value of label-form applied
  to a macro via cs:text.

- Use only the first element of a locator set on a bill
  or legislation item for is-numeric evaluation.

- Implement year-range-format as an option separate from
  page-range-format

- Add optional terms year-range-delimiter and citation-range-delimiter

- Apply year-range-format to collection-number on legal types when 
  rendered via cs:number

- Parse out embedded labels from page and page-first as well as locator 
  when rendering via cs:number

- Render parsed-out page/page-first labels via cs:label, and implement
  a page label test similar to locator label test to control
  output. Introducing a page-label variable would be a cleaner way to
  do this on the input side, but for the moment this serves the
  purpose for style development.

- Provide for override of section marker on bill and legislation
  pinpoint with abbrev. at start of section string.

- Insulate changes to item.locator and item.label from copy